Revert "Fix external orders overflow scoping to override sw-page inner containers"

--- a/custom/plugins/ExternalOrders/src/Resources/app/administration/src/module/external-orders/page/external-orders-list/external-orders-list.scss
+++ b/custom/plugins/ExternalOrders/src/Resources/app/administration/src/module/external-orders/page/external-orders-list/external-orders-list.scss
@@ -1,4 +1,4 @@
-:global(.external-orders) {
+.external-orders {
     :global(.external-orders__page .sw-page__main-content),
     :global(.external-orders__page .sw-page__side-content),
     :global(.sw-page__main-content-inner.external-orders__page),
